Disabled dead code (method getTripDeals)